--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -233,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "fact",
    "language": "python",
    "name": "python3"
   },
@@ -247,12 +247,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "095d5703c287d1ac4faa9c3019f62a411dddf0ab25c48ad1a9cb5f1160493474"
    }
   }
  },
