Moved JSON files and added std dev.

--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,10 +19,11 @@
     "from collections import defaultdict\n",
     "import numpy as np\n",
     "\n",
-    "example = os.listdir(\"output\")[0]\n",
+    "path = os.path.join(\"statistics\", \"data\")\n",
+    "example = os.listdir(path)[0]\n",
     "df_dict = {}\n",
-    "for file in os.listdir(\"output\"):\n",
-    "    df_dict[file[:-5]]=pd.read_json(os.path.join(\"output\",file), orient=\"records\")\n",
+    "for file in os.listdir(path):\n",
+    "    df_dict[file[:-5]]=pd.read_json(os.path.join(path,file), orient=\"records\")\n",
     "print(df_dict.keys())"
    ]
   },
@@ -35,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yassi\\AppData\\Local\\Temp\\ipykernel_25792\\3387964651.py:51: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "<ipython-input-5-cf2bf426603d>:51: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  dd[algo][f\"{var}_mean\"] = d[algo][var]/d[algo][f\"{var}_count\"]\n"
      ]
     }
@@ -64,6 +65,7 @@
     "    'FairConst'       : 'Fairness Constraints',\n",
     "    'FairRobust'      : 'RFLearn'\n",
     "}\n",
+    "\n",
     "df_ex[\"name\"]=df_ex[\"name\"].map(pprint_map)\n",
     "deployed = defaultdict(list)\n",
     "original = defaultdict(list)\n",
@@ -71,6 +73,8 @@
     "def get_algo_dict():\n",
     "    return defaultdict(dict)\n",
     "var_dict = defaultdict(get_algo_dict)\n",
+    "\n",
+    "columns = [\"original_nsf\", \"original_acc_mean\", \"antagonist_acc_mean\", \"original_g_mean\", \"antagonist_g_mean\"]\n",
     "\n",
     "for dataset_constraint in df_dict:\n",
     "    for algo in df_ex['name'].unique():\n",
@@ -80,7 +84,7 @@
     "        # pick algo\n",
     "        df_model = df[df['name']==algo].copy()\n",
     "\n",
-    "        for var in [\"original_nsf\", \"original_acc_mean\", \"antagonist_acc_mean\", \"original_g_mean\", \"antagonist_g_mean\"]:\n",
+    "        for var in columns:\n",
     "            var_dict[dataset_constraint][algo][var] = [df_model[var].sum(),len(df_model[var])-df_model[var].isna().sum()] # Add values for calculating mean for var in constraint for certain model\n",
     "\n",
     "        # diff\n",
@@ -97,7 +101,7 @@
     "def create_mean(d):\n",
     "    dd = defaultdict(get_algo_dict)\n",
     "    for algo in df_ex['name'].unique():  \n",
-    "        for var in  [\"original_nsf\", \"original_acc_mean\", \"antagonist_acc_mean\", \"original_g_mean\", \"antagonist_g_mean\"]:\n",
+    "        for var in  columns:\n",
     "            dd[algo][f\"{var}_mean\"] = d[algo][var]/d[algo][f\"{var}_count\"]\n",
     "    return dd\n",
     "\n",
@@ -106,12 +110,11 @@
     "    for dataset in [i for i in var_dict if data in i]:\n",
     "        if type in dataset:\n",
     "            for algo in df_ex['name'].unique():   \n",
-    "                for var in  [\"original_nsf\", \"original_acc_mean\", \"antagonist_acc_mean\", \"original_g_mean\", \"antagonist_g_mean\"]:\n",
+    "                for var in columns:\n",
     "                    d[algo][var] = var_dict[dataset][algo][var][0]\n",
     "                    d[algo][f\"{var}_count\"] = var_dict[dataset][algo][var][1]\n",
     "    dd = create_mean(d)\n",
     "    return dd\n",
-    "\n",
     "\n",
     "for dataset in var_dict[\"iclr_adult_fixed_ds_rl_dp\"]:\n",
     "    adult_antag = create_dict(adult_antag, \"adult\", \"antag\")\n",
@@ -123,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Yassi\\AppData\\Local\\Temp\\ipykernel_25792\\836659375.py:6: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(df.round(3).to_latex())\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -195,18 +190,6 @@
       "\\end{tabular}\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Yassi\\AppData\\Local\\Temp\\ipykernel_25792\\836659375.py:6: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(df.round(3).to_latex())\n",
-      "C:\\Users\\Yassi\\AppData\\Local\\Temp\\ipykernel_25792\\836659375.py:6: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(df.round(3).to_latex())\n",
-      "C:\\Users\\Yassi\\AppData\\Local\\Temp\\ipykernel_25792\\836659375.py:6: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(df.round(3).to_latex())\n"
-     ]
     }
    ],
    "source": [
@@ -233,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fact",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -247,12 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "095d5703c287d1ac4faa9c3019f62a411dddf0ab25c48ad1a9cb5f1160493474"
+    "hash": "023a641bc30c0767e0627bcf1a13af4b401a241c50ce9d3b74298d2472a9444f"
    }
   }
  },
