--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "fact",
    "language": "python",
    "name": "python3"
   },
@@ -230,12 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "023a641bc30c0767e0627bcf1a13af4b401a241c50ce9d3b74298d2472a9444f"
+    "hash": "095d5703c287d1ac4faa9c3019f62a411dddf0ab25c48ad1a9cb5f1160493474"
    }
   }
  },
