--- a/Python/results_json.ipynb
+++ b/Python/results_json.ipynb
@@ -299,26 +299,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(x1-x2)/x1 -0.009933011893726869 t =  -8.892211502566656 p =  3.9175282329217964e-07 N= 16.0\n",
-      "(x1-x2)/x1 -0.02536810495469 t =  -1.3599139260284383 p =  0.20107715059325937 N= 13.0\n",
-      "(x1-x2)/x1 -0.039514192568761604 t =  -14.255636213727453 p =  2.220446049250313e-16 N= 38.0\n",
-      "(x1-x2)/x1 -0.005977274632086968 t =  -3.2414211074977772 p =  0.0023311732719604183 N= 44.0\n",
-      "(x1-x2)/x1 -0.0029242907839863537 t =  -1.4100611065912747 p =  0.1660631580871621 N= 43.0\n",
-      "(x1-x2)/x1 -0.011905441361976781 t =  -5.870888518388774 p =  1.1423241075281254e-06 N= 37.0\n",
-      "(x1-x2)/x1 -0.04416437072969312 t =  -3.4064863404168553 p =  0.0025318090707227014 N= 24.0\n",
-      "(x1-x2)/x1 -0.3495677984492061 t =  -21.93773374493995 p =  5.773159728050814e-15 N= 21.0\n",
-      "(x1-x2)/x1 -0.04659046435391346 t =  -2.980763556184939 p =  0.008391720695852811 N= 19.0\n",
-      "(x1-x2)/x1 -0.02222437075446541 t =  -5.743070814332001 p =  1.6840400742790251e-06 N= 37.0\n",
-      "(x1-x2)/x1 -0.14147815066364755 t =  -11.715412498308192 p =  6.661338147750939e-16 N= 52.0\n",
-      "(x1-x2)/x1 -0.2337760668365243 t =  nan p =  nan N= 25.0\n",
-      "(x1-x2)/x1 -0.06454790025544044 t =  -6.942817405997742 p =  2.2653017306417667e-07 N= 28.0\n"
+      "RFLearn\n",
+      "difference (%) =  -0.009933011893726869 t =  -8.892211502566656 p =  3.9175282329217964e-07 N= 16.0\n",
+      "Seldonian\n",
+      "No results, not enough samples\n",
+      "Fairlearn\n",
+      "No results, not enough samples\n",
+      "Seldonian\n",
+      "difference (%) =  -0.02536810495469 t =  -1.3599139260284383 p =  0.20107715059325937 N= 13.0\n",
+      "RFLearn\n",
+      "difference (%) =  -0.039514192568761604 t =  -14.255636213727453 p =  2.220446049250313e-16 N= 38.0\n",
+      "RFLearn\n",
+      "difference (%) =  -0.005977274632086968 t =  -3.2414211074977772 p =  0.0023311732719604183 N= 44.0\n",
+      "RFLearn\n",
+      "difference (%) =  -0.0029242907839863537 t =  -1.4100611065912747 p =  0.1660631580871621 N= 43.0\n",
+      "RFLearn\n",
+      "difference (%) =  -0.011905441361976781 t =  -5.870888518388774 p =  1.1423241075281254e-06 N= 37.0\n",
+      "Seldonian\n",
+      "difference (%) =  -0.04416437072969312 t =  -3.4064863404168553 p =  0.0025318090707227014 N= 24.0\n",
+      "RFLearn\n",
+      "No results, not enough samples\n",
+      "Quasi-Seldonian\n",
+      "difference (%) =  -0.3495677984492061 t =  -21.93773374493995 p =  5.773159728050814e-15 N= 21.0\n",
+      "Seldonian\n",
+      "difference (%) =  -0.04659046435391346 t =  -2.980763556184939 p =  0.008391720695852811 N= 19.0\n",
+      "Quasi-Seldonian\n",
+      "difference (%) =  -0.02222437075446541 t =  -5.743070814332001 p =  1.6840400742790251e-06 N= 37.0\n",
+      "Fairlearn\n",
+      "difference (%) =  -0.14147815066364755 t =  -11.715412498308192 p =  6.661338147750939e-16 N= 52.0\n",
+      "Seldonian\n",
+      "difference (%) =  -0.2337760668365243 t =  nan p =  nan N= 25.0\n",
+      "Quasi-Seldonian\n",
+      "difference (%) =  -0.06454790025544044 t =  -6.942817405997742 p =  2.2653017306417667e-07 N= 28.0\n"
      ]
     }
    ],
@@ -330,9 +349,10 @@
     "\n",
     "\n",
     "    df_max = df[(df[\"name\"] !=\"Shifty\")&(df[\"n_train\"]==60000)]\n",
+    "\n",
     "    idmax = df_max.sort_values(by=[\"antagonist_acc_mean\"], ascending=False)[\"antagonist_acc_mean\"].idxmax()\n",
     "    df_max = df_max.loc[idmax]\n",
-    "    df_max\n",
+    "    print(df_max[\"name\"])\n",
     "\n",
     "    def t_test(x1,x2, s1,s2,n1,n2):\n",
     "        t = (x1-x2)/np.sqrt(s1**2/n1 + s2**2/n2)\n",
@@ -356,7 +376,9 @@
     "    t = t_test(x1,x2, s1,s2,n1,n2)\n",
     "    p = 2*(1-stats.t.cdf(abs(t), df))\n",
     "    if n1+n2 > 9:\n",
-    "        print(\"(x1-x2)/x1\", (x1-x2)/x1 ,\"t = \", t, \"p = \", p, \"N=\", n1+n2)"
+    "        print(\"difference (%) = \", (x1-x2)/x1 ,\"t = \", t, \"p = \", p, \"N=\", n1+n2)\n",
+    "    else: \n",
+    "        print(\"No results, not enough samples\")"
    ]
   },
   {
