--- a/Python/results_and_stats_to_latex.ipynb
+++ b/Python/results_and_stats_to_latex.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['iclr_adult_antag_ds_rl_di', 'iclr_adult_antag_ds_rl_dp', 'iclr_adult_antag_ds_rl_eodds', 'iclr_adult_antag_ds_rl_eopp', 'iclr_adult_antag_ds_rl_pe', 'iclr_adult_fixed_ds_rl_di', 'iclr_adult_fixed_ds_rl_dp', 'iclr_adult_fixed_ds_rl_eodds', 'iclr_adult_fixed_ds_rl_eopp', 'iclr_adult_fixed_ds_rl_pe', 'iclr_brazil_antag_ds_rl_di', 'iclr_brazil_antag_ds_rl_dp', 'iclr_brazil_antag_ds_rl_eodds', 'iclr_brazil_antag_ds_rl_eopp', 'iclr_brazil_antag_ds_rl_pe', 'iclr_brazil_fixed_ds_rl_dp', 'iclr_brazil_fixed_ds_rl_eodds', 'iclr_brazil_fixed_ds_rl_eopp', 'iclr_brazil_fixed_ds_rl_pe'])"
+       "dict_keys(['iclr_adult_antag_ds_rl_di', 'iclr_adult_antag_ds_rl_dp', 'iclr_adult_antag_ds_rl_eodds', 'iclr_adult_antag_ds_rl_eopp', 'iclr_adult_antag_ds_rl_pe', 'iclr_adult_fixed_ds_rl_di', 'iclr_adult_fixed_ds_rl_dp', 'iclr_adult_fixed_ds_rl_eodds', 'iclr_adult_fixed_ds_rl_eopp', 'iclr_adult_fixed_ds_rl_pe', 'iclr_brazil_antag_ds_rl_di', 'iclr_brazil_antag_ds_rl_dp', 'iclr_brazil_antag_ds_rl_eodds', 'iclr_brazil_antag_ds_rl_eopp', 'iclr_brazil_antag_ds_rl_pe', 'iclr_brazil_fixed_ds_rl_di', 'iclr_brazil_fixed_ds_rl_dp', 'iclr_brazil_fixed_ds_rl_eodds', 'iclr_brazil_fixed_ds_rl_eopp', 'iclr_brazil_fixed_ds_rl_pe'])"
       ]
      },
      "execution_count": 1,
@@ -25,7 +25,7 @@
     "\n",
     "pd.options.mode.chained_assignment = None\n",
     "\n",
-    "NUM_TTESTS = 15\n",
+    "NUM_TTESTS = 17\n",
     "path = \"results/output\"\n",
     "\n",
     "# Read all json files in the output folder\n",
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def t_test(x1,x2, s1,s2,n1,n2):\n",
     "    t = (x1-x2)/np.sqrt(s1**2/n1 + s2**2/n2)\n",
-    "    return t\n",
+    "    return abs(t)\n",
     "\n",
     "def p_value(t, df):\n",
     "    p = 1 - stats.t.cdf(t, df) # one-sided\n",
@@ -101,8 +101,6 @@
     "    s1 = df_shifty[\"antagonist_acc_std\"].item()\n",
     "    s2 = df_max[\"antagonist_acc_std\"].item()\n",
     "\n",
-    "    print(x1,x2, s1,s2,n1,n2)\n",
-    "\n",
     "    doff = n1+n2-2\n",
     "    if math.isnan(doff):\n",
     "        return -1, None, None\n",
@@ -110,7 +108,6 @@
     "\n",
     "    t = t_test(x1,x2, s1,s2,n1,n2)\n",
     "    p = 2*(1-stats.t.cdf(abs(t), doff))\n",
-    "    print(p)\n",
     "\n",
     "    return p, t, doff\n",
     "\n",
@@ -128,21 +125,21 @@
     "        else:\n",
     "            significant = True\n",
     "            if fixed_stats[0] < 0.001:\n",
-    "                footnote += \" Fixed Bounds: $p<0.001$, $t={:.3f}$, $df={}$.\".format(fixed_stats[1], fixed_stats[2])\n",
+    "                footnote += \"Fixed Bounds: $p<0.001$, $t={:.3f}$, $df={}$; \".format(fixed_stats[1], fixed_stats[2])\n",
     "            else:\n",
-    "                footnote += \" Fixed Bounds: $p={:.3f}$, $t={:.3f}$, $df={}$.\".format(fixed_stats[0], fixed_stats[1], fixed_stats[2])\n",
+    "                footnote += \"Fixed Bounds: $p={:.3f}$, $t={:.3f}$, $df={}$; \".format(fixed_stats[0], fixed_stats[1], fixed_stats[2])\n",
     "    if antag_stats[0] < 0.05:\n",
     "        if antag_stats[0] == -1:\n",
     "            insufficient = True\n",
     "        else:\n",
     "            significant = True\n",
     "            if antag_stats[0] < 0.001:\n",
-    "                footnote += \" Unknown Bounds: $p<0.001$, $t={:.3f}$, $df={}$.\".format(antag_stats[1], antag_stats[2])\n",
+    "                footnote += \"Unknown Bounds: $p<0.001$, $t={:.3f}$, $df={}$; \".format(antag_stats[1], antag_stats[2])\n",
     "            else:\n",
-    "                footnote += \" Unknown Bounds: $p={:.3f}$, $t={:.3f}$, $df={}$.\".format(antag_stats[0], antag_stats[1], antag_stats[2])\n",
+    "                footnote += \"Unknown Bounds: $p={:.3f}$, $t={:.3f}$, $df={}$; \".format(antag_stats[0], antag_stats[1], antag_stats[2])\n",
     "\n",
     "    if significant:\n",
-    "        footnote = \"*significantly worse than \\\\textbf{best model}.\" + footnote\n",
+    "        footnote = \"*significantly worse than best model; \" + footnote\n",
     "    if insufficient:\n",
     "        footnote += \"°insufficient number of solutions to perform t-test\"\n",
     "\n",
@@ -154,15 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan 0.7857490300000001 nan 0.0014848716 nan 25.0\n",
-      "nan 0.8408337065 nan 0.0103867373 nan 16.0\n",
       "\\begin{table}[H]\n",
       "\\caption{Disparate Impact - adult dataset}\n",
       "\\label{di_adult}\n",
@@ -171,22 +166,18 @@
       " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
       " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
       "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
-      "FairConst & 0 & 0.781 & \\bfseries 1.000 & -0.003 & 0 & 0.791 & \\bfseries 1.000 & -0.030 \\\\\n",
-      "RFLearn & 0 & \\bfseries 0.786 & \\bfseries 1.000 & 0.000 & 0 & 0.826 & \\bfseries 1.000 & -0.002 \\\\\n",
-      "Fairlearn & 0 & 0.782 & \\bfseries 1.000 & 0.000 & 0 & \\bfseries 0.841 & \\bfseries 1.000 & 0.003 \\\\\n",
-      "Quasi-SC & 1 & - & - & - & 1 & - & - & - \\\\\n",
-      "Shifty & 1 & - & - & - & 1 & - & - & - \\\\\n",
-      "SC & 1 & - & - & - & 1 & - & - & - \\\\\n",
+      "FairConst & 0 & 0.781 & \\bfseries 1.000 & -0.003 & 0.000 & 0.802 & 1.000 & -0.009 \\\\\n",
+      "RFLearn & 0 & \\bfseries 0.786 & \\bfseries 1.000 & 0.000 & 0.000 & 0.823 & 1.000 & 0.005 \\\\\n",
+      "Fairlearn & 0 & 0.782 & \\bfseries 1.000 & 0.000 & 0.000 & \\bfseries 0.842 & 1.000 & 0.007 \\\\\n",
+      "Quasi-SC & 1 & - & - & - & 0.600 & 0.767 & 0.500 & 0.139 \\\\\n",
+      "Shifty & 1 & - & - & - & 0.400 & 0.750 & \\bfseries 0.000 & 0.167 \\\\\n",
+      "SC & 1 & - & - & - & 0.500 & 0.781 & \\bfseries 0.000 & 0.140 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
-      "{\\raggedright °insufficient number of solutions to perform t-test \\par}\n",
+      "{\\raggedright *significantly worse than best model; Unknown Bounds: $p<0.001$, $t=32.561$, $df=24$; °insufficient number of solutions to perform t-test \\par}\n",
       "\\end{table}\n",
       "\n",
       "\n",
-      "0.7558572755 0.7857243654 0.0074668123 0.0015871435 13.0 25.0\n",
-      "2.220446049250313e-16\n",
-      "0.7798652913 0.7876117025 0.0018884868 0.0015826482000000002 8.0 8.0\n",
-      "3.9175283728098975e-07\n",
       "\\begin{table}[H]\n",
       "\\caption{Demographic Parity - adult dataset}\n",
       "\\label{dp_adult}\n",
@@ -203,14 +194,10 @@
       "SC & 0.520 & 0.756 & \\bfseries 0.000 & - & 0.000 & 0.781 & \\bfseries 0.000 & 0.032 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
-      "{\\raggedright *significantly worse than \\textbf{best model}. Fixed Bounds: $p<0.001$, $t=-14.256$, $df=36$. Unknown Bounds: $p<0.001$, $t=-8.892$, $df=14$. \\par}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=14.256$, $df=36$; Unknown Bounds: $p<0.001$, $t=8.892$, $df=14$;  \\par}\n",
       "\\end{table}\n",
       "\n",
       "\n",
-      "0.7812109461000001 0.7858804584 0.0060903885 0.001753596 19.0 25.0\n",
-      "0.002331173734079206\n",
-      "0.7573094689000001 0.8246453145 0.0035581625000000003 0.0046251692 2.0 3.0\n",
-      "0.0003529596376414812\n",
       "\\begin{table}[H]\n",
       "\\caption{Equalized Odds - adult dataset}\n",
       "\\label{eodds_adult}\n",
@@ -227,13 +214,10 @@
       "SC & 0.280 & 0.776 & \\bfseries 0.000 & - & 0.625 & \\bfseries 0.825 & \\bfseries 0.000 & - \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
-      "{\\raggedright *significantly worse than \\textbf{best model}. Fixed Bounds: $p=0.002$, $t=-3.241$, $df=42$. Unknown Bounds: $p<0.001$, $t=-18.353$, $df=3$. \\par}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p=0.002$, $t=3.241$, $df=42$; Unknown Bounds: $p<0.001$, $t=18.353$, $df=3$;  \\par}\n",
       "\\end{table}\n",
       "\n",
       "\n",
-      "0.783312294 0.7856029269 0.0067928742 0.0013735568 18.0 25.0\n",
-      "0.16606316170456914\n",
-      "nan 0.8523426065 nan 0.0164150611 nan 16.0\n",
       "\\begin{table}[H]\n",
       "\\caption{Equal Opportunity - adult dataset}\n",
       "\\label{eopp_adult}\n",
@@ -254,10 +238,6 @@
       "\\end{table}\n",
       "\n",
       "\n",
-      "0.7763871174 0.7856303487 0.0053571119 0.001476799 12.0 25.0\n",
-      "1.142324274061579e-06\n",
-      "0.7950623032 0.8152315272 0.020182863500000002 0.031155104200000002 7.0 6.0\n",
-      "0.20107714939966104\n",
       "\\begin{table}[H]\n",
       "\\caption{Predictive Equality - adult dataset}\n",
       "\\label{pe_adult}\n",
@@ -274,21 +254,110 @@
       "SC & 1.000 & - & - & - & 0.250 & \\bfseries 0.815 & \\bfseries 0.000 & - \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
-      "{\\raggedright *significantly worse than \\textbf{best model}. Fixed Bounds: $p<0.001$, $t=-5.871$, $df=35$. \\par}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=5.871$, $df=35$;  \\par}\n",
+      "\\end{table}\n",
+      "\n",
+      "\n",
+      "\\begin{table}[H]\n",
+      "\\caption{Disparate Impact - brazil dataset}\n",
+      "\\label{di_brazil}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
+      " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
+      "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
+      "FairConst & 0.000 & 0.612 & 1.000 & -0.001 & 0.000 & 0.612 & 1.000 & 0.001 \\\\\n",
+      "RFLearn & 0.000 & 0.648 & 0.040 & -0.001 & 0.000 & 0.642 & \\bfseries 0.000 & -0.004 \\\\\n",
+      "Fairlearn & 0.000 & 0.650 & 0.600 & -0.001 & 0.000 & 0.649 & 0.600 & 0.000 \\\\\n",
+      "Quasi-SC & 0.000 & \\bfseries 0.657 & 0.400 & 0.008 & 0.000 & \\bfseries 0.656 & 0.200 & 0.007 \\\\\n",
+      "Shifty & 0.600 & 0.606 & \\bfseries 0.000 & 0.130 & 0.450 & 0.480 & \\bfseries 0.000 & 0.030 \\\\\n",
+      "SC & 0.000 & 0.657 & 0.240 & 0.010 & 0.050 & 0.654 & \\bfseries 0.000 & 0.009 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=5.357$, $df=33$; Unknown Bounds: $p<0.001$, $t=22.643$, $df=29$;  \\par}\n",
+      "\\end{table}\n",
+      "\n",
+      "\n",
+      "\\begin{table}[H]\n",
+      "\\caption{Demographic Parity - brazil dataset}\n",
+      "\\label{dp_brazil}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
+      " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
+      "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
+      "FairConst & 0.000 & 0.612 & 1.000 & -0.000 & 0.000 & 0.612 & 1.000 & 0.000 \\\\\n",
+      "RFLearn & 0.000 & 0.648 & \\bfseries 0.000 & 0.001 & 0.000 & 0.645 & \\bfseries 0.000 & 0.000 \\\\\n",
+      "Fairlearn & 0.000 & 0.653 & 0.400 & 0.001 & 0.000 & 0.649 & 0.500 & 0.001 \\\\\n",
+      "Quasi-SC & 0.000 & \\bfseries 0.657 & 0.160 & 0.006 & 0.000 & 0.655 & 0.050 & 0.007 \\\\\n",
+      "Shifty & 0.520 & 0.643 & \\bfseries 0.000 & 0.058 & 0.800 & 0.628 & \\bfseries 0.000 & - \\\\\n",
+      "SC & 0.000 & 0.656 & 0.080 & 0.005 & 0.000 & \\bfseries 0.656 & 0.050 & 0.006 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=5.743$, $df=35$; Unknown Bounds: $p=0.003$, $t=3.406$, $df=22$;  \\par}\n",
+      "\\end{table}\n",
+      "\n",
+      "\n",
+      "\\begin{table}[H]\n",
+      "\\caption{Equalized Odds - brazil dataset}\n",
+      "\\label{eodds_brazil}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
+      " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
+      "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
+      "FairConst & 0.000 & 0.612 & 1.000 & -0.001 & 0.000 & 0.612 & 1.000 & 0.001 \\\\\n",
+      "RFLearn & 0.000 & 0.650 & \\bfseries 0.000 & -0.001 & 0.000 & \\bfseries 0.656 & 0.900 & 0.001 \\\\\n",
+      "Fairlearn & 0.000 & \\bfseries 0.651 & 0.520 & -0.000 & 0.000 & 0.647 & 0.475 & 0.000 \\\\\n",
+      "Quasi-SC & 0.000 & 0.648 & 0.080 & 0.084 & 0.050 & 0.650 & 0.211 & 0.064 \\\\\n",
+      "Shifty & 0.920 & 0.570 & \\bfseries 0.000 & - & 1.000 & - & - & - \\\\\n",
+      "SC & 0.240 & 0.634 & \\bfseries 0.000 & 0.108 & 0.350 & 0.640 & \\bfseries 0.077 & 0.075 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=11.715$, $df=50$; °insufficient number of solutions to perform t-test \\par}\n",
+      "\\end{table}\n",
+      "\n",
+      "\n",
+      "\\begin{table}[H]\n",
+      "\\caption{Equal Opportunity - brazil dataset}\n",
+      "\\label{eopp_brazil}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
+      " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
+      "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
+      "FairConst & 0.000 & 0.612 & 1.000 & -0.000 & 0.000 & 0.614 & 1.000 & 0.002 \\\\\n",
+      "RFLearn & 0.000 & 0.650 & 0.320 & 0.002 & 0.000 & 0.647 & 1.000 & 0.000 \\\\\n",
+      "Fairlearn & 0.000 & 0.651 & 0.400 & 0.000 & 0.000 & 0.648 & 0.550 & 0.002 \\\\\n",
+      "Quasi-SC & 0.000 & 0.655 & 0.040 & 0.110 & 0.050 & \\bfseries 0.665 & 0.895 & 0.125 \\\\\n",
+      "Shifty & 0.960 & 0.532 & \\bfseries 0.000 & -0.084 & 0.900 & 0.493 & \\bfseries 0.000 & - \\\\\n",
+      "SC & 0.040 & \\bfseries 0.657 & 0.042 & 0.130 & 0.150 & 0.663 & 0.882 & 0.239 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "{\\raggedright *significantly worse than best model; Unknown Bounds: $p<0.001$, $t=21.938$, $df=19$;  \\par}\n",
+      "\\end{table}\n",
+      "\n",
+      "\n",
+      "\\begin{table}[H]\n",
+      "\\caption{Predictive Equality - brazil dataset}\n",
+      "\\label{pe_brazil}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & \\multicolumn{4}{c}{Fixed Bounds} & \\multicolumn{4}{c}{Unknown Bounds} \\\\\n",
+      " & NSF & Acc & FR & Delta Acc & NSF & Acc & FR & Delta Acc \\\\\n",
+      "\\cmidrule(r){2-5} \\cmidrule{6-9}\n",
+      "FairConst & 0.000 & 0.613 & 1.000 & 0.000 & 0.000 & 0.612 & 1.000 & 0.000 \\\\\n",
+      "RFLearn & 0.000 & 0.649 & 0.440 & 0.001 & 0.000 & 0.648 & 0.150 & -0.001 \\\\\n",
+      "Fairlearn & 0.000 & 0.650 & 0.900 & 0.000 & 0.000 & 0.648 & 0.925 & -0.000 \\\\\n",
+      "Quasi-SC & 0.000 & \\bfseries 0.657 & 0.680 & 0.025 & 0.000 & 0.656 & 0.400 & 0.014 \\\\\n",
+      "Shifty & 0.880 & 0.618 & \\bfseries 0.000 & -0.009 & 0.850 & 0.629 & \\bfseries 0.000 & -0.011 \\\\\n",
+      "SC & 0.040 & 0.656 & 0.375 & 0.129 & 0.200 & \\bfseries 0.658 & \\bfseries 0.000 & 0.092 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "{\\raggedright *significantly worse than best model; Fixed Bounds: $p<0.001$, $t=6.943$, $df=26$; Unknown Bounds: $p=0.008$, $t=2.981$, $df=17$;  \\par}\n",
       "\\end{table}\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'iclr_brazil_fixed_ds_rl_di'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39madult\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbrazil\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[0;32m      2\u001b[0m     \u001b[39mfor\u001b[39;00m fc \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mdi\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdp\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39meodds\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39meopp\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mpe\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[1;32m----> 3\u001b[0m         fixed \u001b[39m=\u001b[39m results[\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39miclr_\u001b[39;49m\u001b[39m{\u001b[39;49;00mdataset\u001b[39m}\u001b[39;49;00m\u001b[39m_fixed_ds_rl_\u001b[39;49m\u001b[39m{\u001b[39;49;00mfc\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m]\n\u001b[0;32m      4\u001b[0m         antag \u001b[39m=\u001b[39m results[\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39miclr_\u001b[39m\u001b[39m{\u001b[39;00mdataset\u001b[39m}\u001b[39;00m\u001b[39m_antag_ds_rl_\u001b[39m\u001b[39m{\u001b[39;00mfc\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m]\n\u001b[0;32m      5\u001b[0m         fixed \u001b[39m=\u001b[39m preprocess(fixed)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'iclr_brazil_fixed_ds_rl_di'"
      ]
     }
    ],
