--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename = \"results\\iclr_brazil_antag_ds_rl_dp_1\\iclr_brazil_antag_ds_rl_dp.h5\""
+    "filename = \"results\\iclr_brazil_antag_ds_rl_dp_0\\iclr_brazil_antag_ds_rl_dp.h5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,43 +47,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>r_train_v_test</th>\n",
-       "      <th>n_train</th>\n",
-       "      <th>include_S</th>\n",
-       "      <th>n_jobs</th>\n",
-       "      <th>standardize</th>\n",
        "      <th>gpa_cutoff</th>\n",
+       "      <th>n_jobs</th>\n",
+       "      <th>n_train</th>\n",
        "      <th>include_R</th>\n",
        "      <th>base_path</th>\n",
-       "      <th>interpolation_factor</th>\n",
+       "      <th>r_train_v_test</th>\n",
+       "      <th>include_S</th>\n",
+       "      <th>standardize</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>60000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10000</td>\n",
        "      <td>False</td>\n",
        "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>iclr_brazil_antag_ds_rl_dp</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   r_train_v_test  n_train  include_S  n_jobs  standardize  gpa_cutoff  \\\n",
-       "0             0.4    60000      False       7         True         3.0   \n",
+       "   gpa_cutoff  n_jobs  n_train  include_R                   base_path  \\\n",
+       "0         3.0      24    10000      False  iclr_brazil_antag_ds_rl_dp   \n",
+       "1         3.0      24    20000      False  iclr_brazil_antag_ds_rl_dp   \n",
+       "2         3.0      24    30000      False  iclr_brazil_antag_ds_rl_dp   \n",
+       "3         3.0      24    40000      False  iclr_brazil_antag_ds_rl_dp   \n",
+       "4         3.0      24    50000      False  iclr_brazil_antag_ds_rl_dp   \n",
+       "5         3.0      24    60000      False  iclr_brazil_antag_ds_rl_dp   \n",
        "\n",
-       "   include_R                   base_path  interpolation_factor  \n",
-       "0      False  iclr_brazil_antag_ds_rl_dp                  0.25  "
+       "   r_train_v_test  include_S  standardize  \n",
+       "0             0.4      False         True  \n",
+       "1             0.4      False         True  \n",
+       "2             0.4      False         True  \n",
+       "3             0.4      False         True  \n",
+       "4             0.4      False         True  \n",
+       "5             0.4      False         True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,89 +197,182 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.638801</td>\n",
-       "      <td>-0.089839</td>\n",
-       "      <td>0.653320</td>\n",
-       "      <td>-0.052754</td>\n",
-       "      <td>572.951973</td>\n",
-       "      <td>QSRC</td>\n",
+       "      <td>0.613860</td>\n",
+       "      <td>0.088536</td>\n",
+       "      <td>0.608824</td>\n",
+       "      <td>0.105929</td>\n",
+       "      <td>28.320213</td>\n",
+       "      <td>SRC</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40315988</td>\n",
+       "      <td>34471197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>False</td>\n",
-       "      <td>0.623421</td>\n",
-       "      <td>-0.075917</td>\n",
-       "      <td>0.646802</td>\n",
-       "      <td>-0.063707</td>\n",
-       "      <td>598.158164</td>\n",
-       "      <td>QSRC</td>\n",
+       "      <td>0.638131</td>\n",
+       "      <td>-0.093799</td>\n",
+       "      <td>0.642255</td>\n",
+       "      <td>-0.069470</td>\n",
+       "      <td>30.727435</td>\n",
+       "      <td>SC</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40932111</td>\n",
+       "      <td>34471197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.619241</td>\n",
-       "      <td>-0.094179</td>\n",
-       "      <td>0.617944</td>\n",
-       "      <td>-0.090138</td>\n",
-       "      <td>608.531286</td>\n",
-       "      <td>QSRC</td>\n",
+       "      <td>0.611990</td>\n",
+       "      <td>0.113359</td>\n",
+       "      <td>0.607412</td>\n",
+       "      <td>0.136636</td>\n",
+       "      <td>36.424098</td>\n",
+       "      <td>SRC</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>60326604</td>\n",
+       "      <td>34471197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>False</td>\n",
-       "      <td>0.587396</td>\n",
-       "      <td>-0.057698</td>\n",
-       "      <td>0.584711</td>\n",
-       "      <td>-0.056921</td>\n",
-       "      <td>634.523315</td>\n",
-       "      <td>QSRC</td>\n",
+       "      <td>0.609819</td>\n",
+       "      <td>0.113431</td>\n",
+       "      <td>0.603758</td>\n",
+       "      <td>0.136513</td>\n",
+       "      <td>15.142944</td>\n",
+       "      <td>FairConst</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>66577413</td>\n",
+       "      <td>34471197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>0.612867</td>\n",
+       "      <td>0.086277</td>\n",
+       "      <td>0.606049</td>\n",
+       "      <td>0.100044</td>\n",
+       "      <td>21.745862</td>\n",
+       "      <td>FairConst</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34471197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>955</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.616678</td>\n",
-       "      <td>-0.043664</td>\n",
-       "      <td>0.613983</td>\n",
-       "      <td>-0.013002</td>\n",
-       "      <td>880.249980</td>\n",
+       "      <td>0.633674</td>\n",
+       "      <td>-0.073794</td>\n",
+       "      <td>0.646978</td>\n",
+       "      <td>-0.047379</td>\n",
+       "      <td>1522.164714</td>\n",
        "      <td>QSRC</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>76271484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>956</th>\n",
+       "      <td>False</td>\n",
+       "      <td>0.636284</td>\n",
+       "      <td>-0.048905</td>\n",
+       "      <td>0.650979</td>\n",
+       "      <td>-0.027659</td>\n",
+       "      <td>1094.327878</td>\n",
+       "      <td>FairRobust</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>25249251</td>\n",
+       "      <td>76271484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>957</th>\n",
+       "      <td>True</td>\n",
+       "      <td>0.623583</td>\n",
+       "      <td>-0.091788</td>\n",
+       "      <td>0.649439</td>\n",
+       "      <td>-0.056158</td>\n",
+       "      <td>1193.870312</td>\n",
+       "      <td>QSRC</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76271484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>False</td>\n",
+       "      <td>0.626885</td>\n",
+       "      <td>-0.094063</td>\n",
+       "      <td>0.626767</td>\n",
+       "      <td>-0.067379</td>\n",
+       "      <td>949.032255</td>\n",
+       "      <td>FairRobust</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76271484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>959</th>\n",
+       "      <td>True</td>\n",
+       "      <td>0.632566</td>\n",
+       "      <td>-0.099555</td>\n",
+       "      <td>0.651151</td>\n",
+       "      <td>-0.074321</td>\n",
+       "      <td>1045.534874</td>\n",
+       "      <td>QSRC</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76271484</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>960 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   original_nsf  original_acc  original_g  antagonist_acc  antagonist_g  \\\n",
-       "0          True      0.638801   -0.089839        0.653320     -0.052754   \n",
-       "1         False      0.623421   -0.075917        0.646802     -0.063707   \n",
-       "2          True      0.619241   -0.094179        0.617944     -0.090138   \n",
-       "3         False      0.587396   -0.057698        0.584711     -0.056921   \n",
-       "4          True      0.616678   -0.043664        0.613983     -0.013002   \n",
+       "     original_nsf  original_acc  original_g  antagonist_acc  antagonist_g  \\\n",
+       "0            True      0.613860    0.088536        0.608824      0.105929   \n",
+       "1           False      0.638131   -0.093799        0.642255     -0.069470   \n",
+       "2            True      0.611990    0.113359        0.607412      0.136636   \n",
+       "3           False      0.609819    0.113431        0.603758      0.136513   \n",
+       "4           False      0.612867    0.086277        0.606049      0.100044   \n",
+       "..            ...           ...         ...             ...           ...   \n",
+       "955          True      0.633674   -0.073794        0.646978     -0.047379   \n",
+       "956         False      0.636284   -0.048905        0.650979     -0.027659   \n",
+       "957          True      0.623583   -0.091788        0.649439     -0.056158   \n",
+       "958         False      0.626885   -0.094063        0.626767     -0.067379   \n",
+       "959          True      0.632566   -0.099555        0.651151     -0.074321   \n",
        "\n",
-       "      runtime  name  tid  pid      seed  \n",
-       "0  572.951973  QSRC    0    0  40315988  \n",
-       "1  598.158164  QSRC    0    0  40932111  \n",
-       "2  608.531286  QSRC    0    0  60326604  \n",
-       "3  634.523315  QSRC    0    0  66577413  \n",
-       "4  880.249980  QSRC    0    0  25249251  "
+       "         runtime        name  tid  pid      seed  \n",
+       "0      28.320213         SRC    1    0  34471197  \n",
+       "1      30.727435          SC    0    0  34471197  \n",
+       "2      36.424098         SRC    0    0  34471197  \n",
+       "3      15.142944   FairConst    0    0  34471197  \n",
+       "4      21.745862   FairConst    1    0  34471197  \n",
+       "..           ...         ...  ...  ...       ...  \n",
+       "955  1522.164714        QSRC    2    0  76271484  \n",
+       "956  1094.327878  FairRobust    4    0  76271484  \n",
+       "957  1193.870312        QSRC    4    0  76271484  \n",
+       "958   949.032255  FairRobust    5    0  76271484  \n",
+       "959  1045.534874        QSRC    5    0  76271484  \n",
+       "\n",
+       "[960 rows x 10 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
